# quiet-night

./: README.md
backend/: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  cache.py  config.py  dependencies.py  main.py
backend/app/api/v1/: auth.py  auth_credentials.py  epworth.py  experiments.py  insights.py  journey.py  onboarding.py  partner.py  recommendations.py  router.py  sessions.py
backend/app/db/: supabase.py
backend/app/llm/: __init__.py  client.py  schemas.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: auth_service.py  epworth_service.py  experiment_service.py  insights_service.py  journey_summary_service.py  night_verdict_service.py  partner_service.py  recommendation_service.py  session_service.py  supabase_auth_service.py  tip_service.py  weekly_summary_service.py
backend/docs/: BACKEND_STRUCTURE.md  VERIFICATION_PLAN.md
backend/supabase/migrations/: 001_quietnight_tables.sql  002_profiles_weight_height.sql  003_onboarding_table.sql  004_onboarding_anonymous.sql  005_snore_events_duration.sql  006_table_descriptions.sql  007_sleep_sessions_partner_note.sql  008_consolidate_partner_links.sql  009_sleep_sessions_verdict.sql
mobile/QuietNight/: .env.example  .gitignore  app.json  package-lock.json  package.json
mobile/QuietNight/app/: _layout.tsx  index.tsx  modal.tsx
mobile/QuietNight/components/: AnimatedStep.tsx  CalibrationResultsModal.tsx  CardGradient.tsx  ConfirmModal.tsx  DrawerMenu.tsx  FactorsModal.tsx  (+11 more)
(+87 files in other folders)
